src/css/components/site/links.css
.site__links {
  margin-block-start: auto;

  @media (--phone) {
    display: flex;
    justify-content: space-between;
    gap: 1em;
  }
}

.site__secondary-links {
  position: relative;
  z-index: 1;

  align-items: stretch;
  gap: .25em;
}

.site__link {
  min-width: 2em;
  display: inline-flex;

  vertical-align: middle;
  text-decoration: none;

  color: var(--site-accent, var(--site-primary));

  &:not(:hover,:focus-visible) {
    /**
     * By targetting `.site__link__inner` or `<svg>` instead of
     * `.site__link--main`, we avoid changing the opacity of
     * `.site__link--main::after` which is the focus ring
     * of the whole site card, visible on hover/focus.
     *
     * This should be changed once we can use `:has`.
     */
    > * {
      opacity: .6;
    }
  }
}

.site__link--main {
  flex: 0 1 auto;
  padding-block-end: .2rem;

  justify-content: flex-start;

  overflow-x: hidden;

  @media (--before-phone) {
    display: block;
  }

  // Focus ring for the site card + hack to make the whole card clickable.

  &::after {
    content: '';
    position: absolute;
    inset: calc(var(--site-outline-distance) * -1);
    z-index: 0;

    border: var(--site-outline-w) solid var(--primary);
    border-radius: calc(var(--card-radius) + var(--site-outline-distance));
    opacity: var(--site-outline-visible, 0);
  }
}

.site__link__inner {
  position: relative;
  z-index: 1;

  overflow-x: auto;

  scrollbar-width: none;

  &::-webkit-scrollbar {
    height: 0;
  }
}

